--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -8,11 +8,13 @@ on:
   # this specific branch (a.k.a. book chapter).
   push:
     branches:
-      - root-chapter-03-part0
+      - main
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - root-chapter-03-part0
+      - main
+      - develop
 
 env:
   CARGO_TERM_COLOR: always
